# web-rwkv-gguf

./: .gitignore  Cargo.toml  NEXT_PHASE.md  README.md  benchmark.sh  chat.sh  cleanup.md  debug_gguf.rs  performance-review-2.md  performance-review.md  plan.md
benchmarks/: arch_optimizations.md  benchmarks.md  cleanup_baseline.md  fusor_optimizations.md  memory_layout_optimization.md  phase4_metal.md
crates/web-rwkv-py/: Cargo.toml  README.md  pyproject.toml
crates/web-rwkv-py/python/web_rwkv_py/: __init__.py
crates/web-rwkv-py/src/: info.rs  lib.rs
examples/: batch.rs  bench.rs  bench_back_sampled.rs  bench_batch_embed.rs  bench_cache_hits.rs  bench_format.rs  bench_gpu_sampling.rs  bench_lazy_tensor.rs  bench_loading.rs  bench_matmul.rs  bench_metal_vs_wgpu.rs  bench_metal_vs_wgpu_real.rs  bench_pipeline_phases.rs  bench_q4k_shaders.rs  bench_shader_timing.rs  bench_triple_buffer.rs  benchmark.rs  benchmark_fused.rs  chat.rs  chat_fused.rs  gen.rs  gen_only.rs  inspect.rs  profile.rs  profile_detailed.rs  profile_layers.rs  profile_loading.rs  serde.rs  test_embed_api.rs  test_gguf_shapes.rs  test_lazy_tensor.rs  test_metal.rs  test_metal_integration.rs  test_q4k_dequant.rs
optimization_plan/: benchmarks-v2.md  benchmarks.md  doc_state_optimization.md  fix_shaders.md  handoff_prompt.md  hybrid_architecture.md  model_loading.md  performance_analysis.md  plan-2.md  plan.md  python_bindings_handoff.md  shaders_rules.md  state_embeddings.md
optimization_plan_v2/: 01_executive_summary.md  02_gfx_hal_analysis.md  03_alternatives_comparison.md  04_wgpu_hal_migration_guide.md  05_performance_optimization_alternatives.md  06_action_plan.md  README.md
optimization_plan_v3/: 01_overview.md  (+8 more)
(+98 files in other folders)
