[package]
name = "web-rwkv-py"
version = "0.3.0"
edition = "2021"
authors.workspace = true
description = "Python bindings for web-rwkv"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
name = "web_rwkv_py"

[dependencies]
anyhow = "1"
derivative = "2.2.0"
half = { version = "2.7", features = ["bytemuck", "serde"] }
itertools = "0.14"
memmap2 = "0.9"
numpy = "0.23"
pollster = "0.3.0"
pyo3 = "0.23.3"
safetensors = "0.6"
tokio = { version = "1.48", features = ["full"] }
uid = "0.1.7"

[dependencies.web-rwkv]
path = "../.."
default-features = false
features = ["native"]
