[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "web_rwkv_py"
version = "0.3.0"
description = "Python bindings for web-rwkv RWKV inference engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["rwkv", "llm", "inference", "webgpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
numpy = ["numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "web_rwkv_py"
